Changes: prepare for release
Release 0.427_001

Signed-off-by: Stefan Hermes <hermes@cpan.org>

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension List-MoreUtils-XS
 
+0.427_001   2017-12-12
+    - Fix RT#123631 - build fails on perl >=5.27.4 with -DDEBUGGING,
+      thanks for reporting and the suggested patch goes to Andreas
+      Koenig and Tony Cook
+
 0.426	2017-10-02
     - release 0.425_001 as 0.426
 
