Changes: prepare for release
Add noteworthy changes and bump for another dev-release to let cpantesters
do their business.

Signed-off-by: Jens Rehsack <sno@netbsd.org>

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension List-MoreUtils-XS
 
+0.427_002   2017-12-14
+    - Update ppport.h to 3.37 for improved blead support
+    - Fix RT#123869 - context arg to croak() reported by Zefram
+    - fix RT#123870 - one() returns true on empty list reported by Andy Lester
+    - pamper RT#123868 - $a/$b/$_ refcounting bugs reported by Zefram
+
 0.427_001   2017-12-12
     - Fix RT#123613 - build fails on perl >=5.27.4 with -DDEBUGGING,
       thanks for reporting and the suggested patch goes to Andreas
