--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension List-MoreUtils-XS
 
+0.428	2017-12-19
+    - release 0.427_002 without further changes
+
 0.427_002   2017-12-14
     - Update ppport.h to 3.37 for improved blead support
     - Fix RT#123869 - context arg to croak() reported by Zefram
