--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Perl extension List-MoreUtils-XS
 
+0.429_001	2020-10-02
+    - fix parts of RT#123989: more $a/$b/$_ refcounting bugs
+      since some bugs are simply reported wrong, dealing with them breaks
+      more (including running code) than it solves. Way to heavy to feel
+      better ...
+    - introduce functions slide and slideatatime (wished by SCHWERN)
+    - toolchain fixes
+    - fix RT#133128 - LANG=nb_NO.utf8 related str tests fails (thanks, SJN
+      for reporting and provide a reasonable fix)
+    - fix issue#7 (Typo), thanks AMBS for reporting
+
 0.428	2017-12-19
     - release 0.427_002 without further changes
 
